# Star-Gazer

./: CLAUDE.md  README.md  README.zh-CN.md  TASKS.md  TEST-REPORT.md  USER-STORIES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: StarGazer-Mockup.html  StarGazer-PRD.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  git.rs  mod.rs  project.rs  session.rs  terminal.rs  workspace.rs
src-tauri/src/services/: file_watcher.rs  git_service.rs  mod.rs  project_manager.rs  pty_manager.rs  session_manager.rs  workspace_manager.rs
src-tauri/src/types/: mod.rs  models.rs  workspace.rs
src/constants/: agentColors.ts
src/hooks/: useFileTreeActions.ts  useFileTreeShortcuts.ts  useFileWatcher.ts  useFlipReorder.ts  useGitLog.ts  useGitStatus.ts  useGlobalShortcuts.ts  useProjectGitSync.ts  useTerminal.ts  useWorkspaceAutosave.ts  useWorkspaceBootstrap.ts
src/lib/: colors.ts  commitGraph.ts  diffHighlight.ts  i18n.ts  monaco.ts
src/locales/: en.json  zh.json
src/services/: fs.ts  git.ts  pty.ts  watcher.ts  workspace.ts
src/stores/: canvasStore.ts  fileTreeUIStore.ts  hoverStore.ts  panelStore.ts  projectStore.ts  settingsStore.ts  terminalStore.ts  workspaceStore.ts
src/styles/: animations.css  design-tokens.css  diff-overrides.css  globals.css
src/types/: agent.ts  panel.ts  project.ts  terminal.ts  (+1 more)
(+45 files in other folders)
