[package]
name = "stargazer"
version = "0.2.0"
description = "Star Gazer - Mac 原生轻量开发工作台，为 vibe coding 时代设计"
authors = ["yixi"]
edition = "2021"

[lib]
name = "stargazer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# PTY（终端伪终端）
portable-pty = "0.8"

# 文件监听
notify = { version = "8", features = ["macos_fsevent"] }

# 日志
log = "0.4"
env_logger = "0.11"

# UUID（用于终端和 Agent 实例 ID）
uuid = { version = "1", features = ["v4"] }

# 系统调用（用于 PTY 进程信号管理）
libc = "0.2"

# Workspace 文件路径哈希 + URL-safe 编码
sha1 = "0.10"
base64 = "0.22"
